# polymonad-proofs

./: .gitignore  Applicative.agda  Congruence.agda  Functor.agda  Haskell.agda  Identity.agda  Inductive.agda  Kmett.agda  Makefile  Monad.agda  Polymonad.agda  ProofIrrelevance.agda  README.md  Utilities.agda  index.md  make-ignore
Constrained/: ConstrainedMonad.agda
Haskell/: Applicative.agda  Functor.agda  List.agda
Hicks/: Equivalency.agda  Polymonad.agda  UniqueBinds.agda
KmettMonad/: Definition.agda  EffectMonad.agda  IxMonad.agda  MaybeListMonad.agda  Monad.agda  Polymonad.agda
Monad/: Composable.agda  Identity.agda  List.agda  Maybe.agda  Polymonad.agda  Principal.agda  Unionable.agda
MorphMonad/: Diamond1.agda  Diamond2.agda  MaybeList.agda
Parameterized/: EffectMonad.agda  IndexedMonad.agda  PhantomIndices.agda
Plugin/: SubsetSelection.agda
Polymonad/: Composable.agda  ComposableComposition.agda  Composition.agda  Definition.agda  EffectMonad.agda  HicksPolymonad.agda  HicksPolymonadEquivalency.agda  HicksUniqueBinds.agda  Identity.agda  IndexedMonad.agda  MaybeList.agda  MorphMonad.agda  Principal.agda  PrincipalComposition.agda  PrincipalCompositionExamples.agda  Union.agda  Unionable.agda  UniqueBinds.agda
SuperMonad/: Definition.agda  EffectMonad.agda  HaskSuperMonad.agda  Haskell.agda  IxMonad.agda  Laws.agda  MaybeListMonad.agda  Monad.agda  Polymonad.agda  Union.agda  Uniqueness.agda
Supermonad/: ConstrainedMonad.agda  Definition.agda  DefinitionWithCategory.agda  EffectMonad.agda  IxMonad.agda  Monad.agda  Polymonad.agda
Theory/: AtkeyParameterizedMonad.agda  Category.agda  ConstrainedFunctor.agda  Functor.agda  Kleisli.agda  (+15 more)
haskell-tests/: .gitignore  LICENSE  haskell-tests.cabal
haskell-tests/src/: Main.hs
haskell-tests/src/Test/: Equality.hs  Schemes.hs  Types.hs  Utilities.hs
haskell-tests/src/Test/Laws/: Eq.hs  ListSet.hs  Ord.hs
haskell-tests/src/Test/Laws/Endo/: Applicative.hs  Functor.hs
haskell-tests/src/Test/Laws/Set/: Applicative.hs  Functor.hs
haskell-tests/src/Test/Types/: Endo.hs  Set.hs
(+434 files in other folders)
